feat(api): Access endpoint
